--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>SIMRS</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Pembuatan aplikasi SIMRS untuk Puskesmas Kota Sidoarjo. Teknologi yang digunakan adalah Laravel.
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -148,13 +148,13 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/truck_scale.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Aplikasi Timbangan</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Merupakan aplikasi penimbangan beban untuk pencatatan timbangan truk. Teknologi yang digunakan adalah Laravel.
                         </p>
                         <a href="#">View Project</a>
                     </div>
