--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/truck_scale.png" />
+                        <img src="images/truck_scale.PNG" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
