--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <p>
                             Pembuatan aplikasi SIMRS untuk Puskesmas Kota Sidoarjo. Teknologi yang digunakan adalah Laravel.
                         </p>
-                        <a href="#">View Project</a>
+                        <!-- <a href="#">View Project</a> -->
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -156,7 +156,7 @@
                         <p>
                             Merupakan aplikasi penimbangan beban untuk pencatatan timbangan truk. Teknologi yang digunakan adalah Laravel.
                         </p>
-                        <a href="#">View Project</a>
+                        <!-- <a href="#">View Project</a> -->
                     </div>
                     <!-- End .project-info -->
                 </div>
